fix spacing between divs

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -2,4 +2,5 @@
   font-family: @primary-font;
   color: @primary;
   background: @secondary;
+  height: 5000px;
 }
