--- a/src/components/content.less
+++ b/src/components/content.less
@@ -19,7 +19,7 @@
 
   .content {
     text-align: end;
-    font-size: 156px;
+    font-size: 10vw;
     margin-right: 50px;
     display: flex;
     flex-flow: column;
@@ -29,7 +29,8 @@
     }
 
     #full {
-      margin: 403px 0 5000px 0;
+      position: absolute;
+      margin: calc(100vh - 90px) 0 5000px 0;
     }
   }
 }
